--- a/techefx-property-access-service-dev.properties
+++ b/techefx-property-access-service-dev.properties
@@ -1,2 +1,2 @@
 property-file.name=DEV
-property-file.description=DEV Environment Properties
+property-file.description=DEV Environment Properties!!
